--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebApiDatabase": "Server=localhost\\SQLEXPRESS01;Database=PDV;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
+    "WebApiDatabase": "Server=localhost\\SQLEXPRESS;Database=PDV;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
+
   },
   "Jwt": {
     "Key": "UnaClaveSuperLargaQueNadieJamasAdivinaraLol#2",
