--- a/appsettings.json
+++ b/appsettings.json
@@ -8,8 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebApiDatabase": "Server=localhost\\SQLEXPRESS;Database=PDV;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
-
+    "WebApiDatabase": "Server=tcp:maduritomlapp.database.windows.net,1433;Initial Catalog=PDV;Persist Security Info=False;User ID=cjoga;Password=12Qw12qw12qw;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Jwt": {
     "Key": "UnaClaveSuperLargaQueNadieJamasAdivinaraLol#2",
